# goodreads_book_rating_prediction

./: .gitignore  README.md  generate_collaborative_model.ipynb  generate_collaborative_model.py  generate_content_model.ipynb  generate_content_model.py  generate_model.py  goodreads.ipynb  goodreads_get_info.ipynb  goodreads_library_export.csv  goodreads_model.joblib  main.py  predict_rating.py  pyproject.toml  textual_goodreads_predictor.py  textual_test.py
