[project]
name = "mendhak-goodreads-book-recommendation-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "textual>=5.3.0",
]
